# hierRAG

./: .env.example  .gitignore  README.md  app.py  makefile  pyproject.toml  rag_task_spec.md
core/: eval.py  index.py  ingest.py  rag.py  retrieval.py  utils.py
src/: app.py
src/core/: eval.py  index.py  ingest.py  rag.ipynb  retrieval.py  synthetic_data.py  utils.py
tests/: test_app.py  test_base.py  test_edge_cases.py  test_eval.py  test_ingest.py  test_integration.py  test_retrieval.py  test_utils.py
